tests/ui/error-codes/E0184.rs
#[derive(Copy)] //~ ERROR E0184
struct Foo;

impl Drop for Foo {
    fn drop(&mut self) {
    }
}

fn main() {
}
